--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <script type="module" src="./js/index.js"></script>
+    <title>Homepage</title>
 </head>
 <body>
-    
+    <h1>welcome to Homepage</h1>
+    <button id="logout" class="bg-blue-400 text-white px-2 py-1 rounded capitalize">logout</button>
 </body>
 </html>
