finished all setups

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 
             <div class="">
                 <input type="submit" value="login" class="bg-green-400 text-white px-3 py-0.5 capitalize font-semibold rounded mb-4 cursor-pointer">
-                <p class="capitalize text-xs cursor-pointer underline text-end">don't have an account ? <span class="capitalize text-blue-600 font-bold " id="logRegister">register</span></p>
+                <p class="capitalize text-xs cursor-pointer underline text-end" id="logRegister">don't have an account ? <span class="capitalize text-blue-600 font-bold ">register</span></p>
             </div>
 
         </form>
