--- a/signup.html
+++ b/signup.html
@@ -26,6 +26,7 @@
             <div">
                 <input type="submit" value="register" class="text-white bg-blue-500 capitalize px-3 py-1 rounded shadow hover:bg-green-400 cursor-pointer font-semibold">
                 <h1 class="text-end capitalize font-semibold" id="result"></h1>
+                <p class="capitalize text-xs cursor-pointer underline text-end" id="regLogin">allready have an account <span class="capitalize text-blue-600 font-bold ">login</span></p>
             </div>
 
         </form>
